--- a/Contatti.html
+++ b/Contatti.html
@@ -34,8 +34,8 @@
 
         /* Media query per schermi più piccoli di 768px */
         @media (max-width: 768px) {
-            #pippo {
-                height: 500px;
+        #pippo {
+                height: 400px;
             }
 
             .p23 {
@@ -46,11 +46,11 @@
 
             .header {
                 text-align: center;
-                /* Rimuove la margin-left su schermi piccoli */
+                margin-left: 0; /* Rimuove la margin-left su schermi piccoli */
             }
 
             .link {
-                /* Rimuove la margin-left su schermi piccoli */
+                margin-left: 0; /* Rimuove la margin-left su schermi piccoli */
                 display: block;
                 text-align: center;
             }
