--- a/api.html
+++ b/api.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <style>
+  body {
+    background-color: white; /* Imposta il colore di sfondo desiderato */
+  }
+
   body::-webkit-scrollbar {
     width: 8px; /* Larghezza della scrollbar */
     height: 8px; /* Altezza della scrollbar */
@@ -31,17 +35,17 @@
     scrollbar-arrow-color: none;
   }
   
-  #in{
-        width:80%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.3vw;
-        font-family: 'Anton', sans-serif;
-        border-radius: 50px;
-        padding: 10px;
-    }
+  #in {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3vw;
+    font-family: 'Anton', sans-serif;
+    border-radius: 50px;
+    padding: 10px;
+  }
 </style>
 
 <body>
@@ -56,18 +60,18 @@
 <br>
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CZsKZsrLY9H/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote><script async src="//www.instagram.com/embed.js"></script>
 <br>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CZsKZsrLY9H/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CZsKZsrLY9H/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 <br>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CJexVJglat1/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" > </blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CJexVJglat1/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"> </blockquote> <script async src="//www.instagram.com/embed.js"></script>
 <br>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CHDrslEFHGT/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CGu_HYpF1NS/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CGsxHtulQP6/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CGJ758SldrZ/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CFbu1otCorA/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CFXnUcHCHj3/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CE4wvxyiDzK/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CEzVxkJp4I1/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CHDrslEFHGT/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CGu_HYpF1NS/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CGsxHtulQP6/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CGJ758SldrZ/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CFbu1otCorA/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CFXnUcHCHj3/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CE4wvxyiDzK/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CEzVxkJp4I1/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14"></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 
 </center>
 
