--- a/api.html
+++ b/api.html
@@ -9,6 +9,16 @@
 <style>
   body {
     background-color: white; /* Imposta il colore di sfondo desiderato */
+    margin: 0; /* Rimuove il margine predefinito del body */
+    padding: 0; /* Rimuove il padding predefinito del body */
+  }
+
+  html {
+    background-color: white; /* Imposta il colore di sfondo desiderato per l'elemento html */
+  }
+
+  .instagram-media {
+    background-color: white; /* Imposta il colore di sfondo desiderato per i blocchi Instagram */
   }
 
   body::-webkit-scrollbar {
