--- a/Contatti.html
+++ b/Contatti.html
@@ -21,6 +21,7 @@
             margin-left: 40px;
             color: white; /* Colore normale del link */
             text-decoration: none;
+            font-size: 1.3rem;
         }
 
         .link:hover {
@@ -36,6 +37,7 @@
         @media (max-width: 768px) {
         #pippo {
                 height: 400px;
+                width: 100%;
             }
 
             .p23 {
@@ -59,7 +61,7 @@
 <div id="pippo">
         <br>
         <h1 class="header">Contatti</h1>
-        <p class="p23">Per ogni richiesta di carattere commerciale per eventuali domande scrivete a:</p><br>
+        <p class="p23">Per ogni richiesta di carattere commerciale o per eventuali domande scrivete a:</p><br>
         <a class="link" href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
     </div>
 
